--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -25,7 +25,7 @@
     <string name="root_videos" msgid="8792703517064649453">"סרטונים"</string>
     <string name="root_audio" msgid="3505830755201326018">"אודיו"</string>
     <string name="root_documents" msgid="3829103301363849237">"מסמכים"</string>
-    <string name="permission_required" msgid="1460820436132943754">"נדרשת הרשאה כדי לשנות או למחוק פריט זה."</string>
+    <string name="permission_required" msgid="1460820436132943754">"נדרשת הרשאה כדי לשנות או למחוק את הפריט הזה."</string>
     <string name="permission_required_action" msgid="706370952366113539">"המשך"</string>
     <string name="grant_dialog_button_allow" msgid="1644287024501033471">"כן, זה בסדר"</string>
     <string name="grant_dialog_button_deny" msgid="6190589471415815741">"אני לא מרשה"</string>
