Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ice90769a01ec2d9b0254cf9c4a2c8a2fa43ac2b3

--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other">Vee tans <xliff:g id="COUNT">^1</xliff:g> items uit …</item>
       <item quantity="one">Vee tans item uit …</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
