--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -307,4 +307,6 @@
       <item quantity="other">جارٍ حذف <xliff:g id="COUNT">^1</xliff:g> عنصر…</item>
       <item quantity="one">جارٍ حذف عنصر واحد…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
