--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="one">Eyðir <xliff:g id="COUNT">^1</xliff:g> atriði…</item>
       <item quantity="other">Eyðir <xliff:g id="COUNT">^1</xliff:g> atriðum…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
