--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="one">Се брише <xliff:g id="COUNT">^1</xliff:g> ставка…</item>
       <item quantity="other">Се бришат <xliff:g id="COUNT">^1</xliff:g> ставки…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
