--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other">ဖိုင် <xliff:g id="COUNT">^1</xliff:g> ခုကို ဖျက်နေသည်…</item>
       <item quantity="one">ဖိုင်ကို ဖျက်နေသည်…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
