--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -239,4 +239,6 @@
       <item quantity="other">Usuwam <xliff:g id="COUNT">^1</xliff:g> elementu…</item>
       <item quantity="one">Usuwam element…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
