--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -239,4 +239,6 @@
       <item quantity="few">Brisanje <xliff:g id="COUNT">^1</xliff:g> elementov …</item>
       <item quantity="other">Brisanje <xliff:g id="COUNT">^1</xliff:g> elementov …</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
