--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other">S\'estan suprimint <xliff:g id="COUNT">^1</xliff:g> elements…</item>
       <item quantity="one">S\'està suprimint l\'element…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
