--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -239,4 +239,6 @@
       <item quantity="other">Mazání <xliff:g id="COUNT">^1</xliff:g> položek…</item>
       <item quantity="one">Mazání položky…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
