--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other">Διαγραφή <xliff:g id="COUNT">^1</xliff:g> στοιχείων…</item>
       <item quantity="one">Διαγραφή στοιχείου…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
