--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> üksuse kustutamine …</item>
       <item quantity="one">Üksuse kustutamine …</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
