--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> 件のアイテムを削除しています…</item>
       <item quantity="one">アイテムを削除しています…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
