--- a/res/values-kk/strings.xml
+++ b/res/values-kk/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> элемент жойылуда…</item>
       <item quantity="one">Элемент жойылуда…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
