--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -171,4 +171,5 @@
       <item quantity="other">ກຳລັງລຶບລາຍການ <xliff:g id="COUNT">^1</xliff:g> ລາຍການອອກ…</item>
       <item quantity="one">ກຳລັງລຶບລາຍການອອກ…</item>
     </plurals>
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ບໍ່ສາມາດປະມວນຜົນໄຟລ໌ມີເດຍໄດ້"</string>
 </resources>
