--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other">Memadamkan <xliff:g id="COUNT">^1</xliff:g> item…</item>
       <item quantity="one">Memadamkan item…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
