--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> items verwijderen…</item>
       <item quantity="one">Item verwijderen…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
