--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> آئٹمز حذف کئے جا رہے ہیں…</item>
       <item quantity="one">آئٹم حذف کیا جا رہا ہے…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
