--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -171,4 +171,6 @@
       <item quantity="other">正在删除 <xliff:g id="COUNT">^1</xliff:g> 项内容…</item>
       <item quantity="one">正在删除内容…</item>
     </plurals>
+    <!-- no translation found for transcode_denied (6760546817138288976) -->
+    <skip />
 </resources>
