Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I27135bb3424e83503cad0592c0381bed29ac9826

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -307,6 +307,5 @@
       <item quantity="other">جارٍ حذف <xliff:g id="COUNT">^1</xliff:g> عنصر…</item>
       <item quantity="one">جارٍ حذف عنصر واحد…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"يتعذّر على التطبيق <xliff:g id="APP_NAME">%s</xliff:g> معالجة ملفات الوسائط."</string>
 </resources>
