--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Menghapus <xliff:g id="COUNT">^1</xliff:g> item …</item>
       <item quantity="one">Menghapus item …</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> tidak dapat memproses file media"</string>
 </resources>
