--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="one">Eyðir <xliff:g id="COUNT">^1</xliff:g> atriði…</item>
       <item quantity="other">Eyðir <xliff:g id="COUNT">^1</xliff:g> atriðum…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> getur ekki unnið úr efnisskrám"</string>
 </resources>
