--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">მიმდინარეობს <xliff:g id="COUNT">^1</xliff:g> ერთეულის წაშლა…</item>
       <item quantity="one">მიმდინარეობს  ერთეულის წაშლა…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ვერ ამუშავებს მედია ფაილებს"</string>
 </resources>
