--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="one">Се брише <xliff:g id="COUNT">^1</xliff:g> ставка…</item>
       <item quantity="other">Се бришат <xliff:g id="COUNT">^1</xliff:g> ставки…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> не може да обработува датотеки со аудиовизуелни содржини"</string>
 </resources>
