--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Đang xóa <xliff:g id="COUNT">^1</xliff:g> mục…</item>
       <item quantity="one">Đang xóa mục…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> không thể xử lý các tệp nội dung nghe nhìn"</string>
 </resources>
