--- a/res/values-af/strings.xml
+++ b/res/values-af/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Vee tans <xliff:g id="COUNT">^1</xliff:g> items uit …</item>
       <item quantity="one">Vee tans item uit …</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> kan nie medialêers verwerk nie"</string>
 </resources>
