--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> element silinir…</item>
       <item quantity="one">Element silinir…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> media fayllarını emal edə bilmir"</string>
 </resources>
