--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -205,6 +205,5 @@
       <item quantity="few">Brišu se <xliff:g id="COUNT">^1</xliff:g> stavke…</item>
       <item quantity="other">Briše se <xliff:g id="COUNT">^1</xliff:g> stavki…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ne može da obradi medijske fajlove"</string>
 </resources>
