--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">S\'estan suprimint <xliff:g id="COUNT">^1</xliff:g> elements…</item>
       <item quantity="one">S\'està suprimint l\'element…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> no pot processar els fitxers multimèdia"</string>
 </resources>
