--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Borrando <xliff:g id="COUNT">^1</xliff:g> elementos…</item>
       <item quantity="one">Borrando el elemento…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> no puede procesar archivos multimedia"</string>
 </resources>
