--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="one">درحال حذف <xliff:g id="COUNT">^1</xliff:g> مورد…</item>
       <item quantity="other">درحال حذف <xliff:g id="COUNT">^1</xliff:g> مورد…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> نمی‌تواند فایل‌های رسانه‌ای را پردازش کند"</string>
 </resources>
