--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Poistetaan <xliff:g id="COUNT">^1</xliff:g> kohdetta…</item>
       <item quantity="one">Poistetaan kohdetta…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ei voi käsitellä mediatiedostoja"</string>
 </resources>
