--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="one">Suppression de <xliff:g id="COUNT">^1</xliff:g> élément…</item>
       <item quantity="other">Suppression de <xliff:g id="COUNT">^1</xliff:g> éléments…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ne peut pas traiter les fichiers multimédias"</string>
 </resources>
