--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Eliminando <xliff:g id="COUNT">^1</xliff:g> elementos…</item>
       <item quantity="one">Eliminando 1 elemento…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> non pode procesar ficheiros multimedia"</string>
 </resources>
