--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Eliminazione di <xliff:g id="COUNT">^1</xliff:g> elementi in corso…</item>
       <item quantity="one">Eliminazione dell\'elemento in corso…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> non può elaborare file multimediali"</string>
 </resources>
