--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">항목 <xliff:g id="COUNT">^1</xliff:g>개 삭제 중…</item>
       <item quantity="one">항목 삭제 중…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>에서 미디어 파일을 처리할 수 없습니다"</string>
 </resources>
