--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Sletter <xliff:g id="COUNT">^1</xliff:g> elementer …</item>
       <item quantity="one">Sletter elementet …</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> kan ikke behandle mediefiler"</string>
 </resources>
