--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -239,6 +239,5 @@
       <item quantity="other">Usuwam <xliff:g id="COUNT">^1</xliff:g> elementu…</item>
       <item quantity="one">Usuwam element…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"Aplikacja <xliff:g id="APP_NAME">%s</xliff:g> nie może przetworzyć plików multimediów"</string>
 </resources>
