--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">A eliminar <xliff:g id="COUNT">^1</xliff:g> itens…</item>
       <item quantity="one">A eliminar o item…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"A app <xliff:g id="APP_NAME">%s</xliff:g> não pode processar ficheiros multimédia"</string>
 </resources>
