--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -205,6 +205,5 @@
       <item quantity="other">Se șterg <xliff:g id="COUNT">^1</xliff:g> de elemente…</item>
       <item quantity="one">Se șterge elementul…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> nu poate procesa fișiere media"</string>
 </resources>
