--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -239,6 +239,5 @@
       <item quantity="many">Удаление <xliff:g id="COUNT">^1</xliff:g> объектов…</item>
       <item quantity="other">Удаление <xliff:g id="COUNT">^1</xliff:g> объекта…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"Приложение \"<xliff:g id="APP_NAME">%s</xliff:g>\" не может обрабатывать медиафайлы."</string>
 </resources>
