--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -239,6 +239,5 @@
       <item quantity="other">Odstraňuje sa <xliff:g id="COUNT">^1</xliff:g> položiek…</item>
       <item quantity="one">Odstraňuje sa položka…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> nemôže spracúvať súbory médií"</string>
 </resources>
