--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -239,6 +239,5 @@
       <item quantity="few">Brisanje <xliff:g id="COUNT">^1</xliff:g> elementov …</item>
       <item quantity="other">Brisanje <xliff:g id="COUNT">^1</xliff:g> elementov …</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ne more obdelati predstavnostnih datotek."</string>
 </resources>
