--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">Inafuta vipengee <xliff:g id="COUNT">^1</xliff:g>…</item>
       <item quantity="one">Inafuta kipengee…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> imeshindwa kuchakata faili za maudhui"</string>
 </resources>
