--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">กำลังลบ <xliff:g id="COUNT">^1</xliff:g> รายการ…</item>
       <item quantity="one">กำลังลบรายการ…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>ประมวลผลไฟล์สื่อไม่ได้"</string>
 </resources>
