--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other"><xliff:g id="COUNT">^1</xliff:g> öğe siliniyor…</item>
       <item quantity="one">Öğe siliniyor…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>, medya dosyalarını işleyemez"</string>
 </resources>
