--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -171,6 +171,5 @@
       <item quantity="other">正在删除 <xliff:g id="COUNT">^1</xliff:g> 项内容…</item>
       <item quantity="one">正在删除内容…</item>
     </plurals>
-    <!-- no translation found for transcode_denied (6760546817138288976) -->
-    <skip />
+    <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g>无法处理媒体文件"</string>
 </resources>
