Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ie2fe204cb812638dd40941cbf266d9c169f61ae0

--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -172,4 +172,18 @@
       <item quantity="one">Eliminando 1 elemento…</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> non pode procesar ficheiros multimedia"</string>
+    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
+    <skip />
+    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
+    <skip />
+    <!-- no translation found for transcode_processing_success (447288876429730122) -->
+    <skip />
+    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
+    <skip />
+    <!-- no translation found for transcode_processing (6753136468864077258) -->
+    <skip />
+    <!-- no translation found for transcode_cancel (8555752601907598192) -->
+    <skip />
+    <!-- no translation found for transcode_wait (8909773149560697501) -->
+    <skip />
 </resources>
