--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -172,4 +172,18 @@
       <item quantity="one">ଆଇଟମ୍ ଡିଲିଟ୍ କରାଯାଉଛି…</item>
     </plurals>
     <string name="transcode_denied" msgid="6760546817138288976">"<xliff:g id="APP_NAME">%s</xliff:g> ମିଡିଆ ଫାଇଲଗୁଡ଼ିକୁ ପ୍ରକ୍ରିୟାନ୍ୱିତ କରିପାରିବ ନାହିଁ"</string>
+    <!-- no translation found for transcode_processing_cancelled (5340383917746945590) -->
+    <skip />
+    <!-- no translation found for transcode_processing_error (8921643164508407874) -->
+    <skip />
+    <!-- no translation found for transcode_processing_success (447288876429730122) -->
+    <skip />
+    <!-- no translation found for transcode_processing_started (7789086308155361523) -->
+    <skip />
+    <!-- no translation found for transcode_processing (6753136468864077258) -->
+    <skip />
+    <!-- no translation found for transcode_cancel (8555752601907598192) -->
+    <skip />
+    <!-- no translation found for transcode_wait (8909773149560697501) -->
+    <skip />
 </resources>
